src/scss/components/_header.scss
header {
  background-color: $primary;

  .navbar {
    min-height: 170px;
    .nav-link {
      color: $body-bg;
      &:hover {
        color: $body-bg;
      }
    }

    .nav-link.active {
      color: $secondary;
      &:hover {
        color: $secondary;
      }
    }
    a {
      font-family: $font-family-base;
      font-size: $font-size-navigation;
    }
  }

  .display-credits {
    margin-right: 1em;
    padding: 0.5em 1em;
    background: rgba(0, 0, 0, 0.66);
    border-radius: 8px;
    i {
      font-family: "Lato", sans-serif;
      font-size: 20px;
      font-style: normal;
      font-weight: 400;
      line-height: normal;
      text-decoration-line: underline;
      text-decoration-style: solid;
      text-decoration-skip-ink: auto;
      text-decoration-thickness: auto;
      text-underline-offset: auto;
      text-underline-position: from-font;
      color: $body-bg;
    }
  }
}

.navbar-brand {
  z-index: 10;
}

